# SNNDPC

./: .gitignore  CMakeLists.txt  Demo.cpp  EvaluateAssignment.py  LICENSE  README.md  SNNDPC.hpp
CPU/: CMakeLists.txt  Classifier.cpp  Classifier.h  Core.cpp  Core.h
GPU/: CMakeLists.txt  Classifier.cpp  Classifier.h  Core.cpp  Core.h  FindCUDA.cmake
data/: Birch1.tsv  S2.tsv
python/: Demo.py  SNNDPC.py
python/SNNDPC/: Classifier.py  Core.py  Option.py  __init__.py
python/test/: DemoAggregation.py  DemoFlame.py
res/ClusteringDataset/: ReadRealworld.txt
res/ClusteringDataset/Realworld/BreastCancerWisconsin/: wdbc.data
res/ClusteringDataset/Realworld/Ecoli/: ecoli.data
res/ClusteringDataset/Realworld/ImageSegmentation/: segmentation - Copy.test  segmentation.test
res/ClusteringDataset/Realworld/Ionosphere/: ionosphere.data
res/ClusteringDataset/Realworld/LibrasMovement/: movement_libras.names  movement_libras_1.data  movement_libras_10.data  movement_libras_5.data  movement_libras_8.data  movement_libras_9.data
res/ClusteringDataset/Realworld/OlivettiFaces/: OlivettiFaces.answer  OlivettiFaces.data
res/ClusteringDataset/Realworld/SemeionHandwrittenDigit/: semeion.data  semeion.names
res/ClusteringDataset/Realworld/WaveformDatabaseGenerator/: waveform.c
res/ClusteringDataset/Synthetic/ASets/: a1-ga.pa  a1.txt  a2-ga.pa  a2.txt  a3-ga.pa
res/ClusteringDataset/Synthetic/DimSetsHigh/: dim512.pa
res/ClusteringDataset/Synthetic/SSets/: README.md  s1-cb.txt  s1-groundtruth-plot.xls  s1-label.pa  s1.cb  s1.txt  s2-cb.txt  s2-groundtruth-plot.xls  s2-label.pa  s2.cb  s3-cb.txt  s3-groundtruth-plot.xls  s3-label.pa  s3.cb  s3.txt  s4-cb.txt  s4-groundtruth-plot.xls  s4-label.pa  s4.cb  s4.txt
res/ClusteringDataset/Synthetic/ShapeSets/: README.md
src/m/: Dpc.m  DpcHelper.m  GetAmi.m  KnnDpc.m  KnnDpcHelper.m  Library.m  OlivettiReader.m  OlivettiWriter.m  ReadDataset.m  SnnDpc.m  SnnDpcHelper.m
test/: Demo.cpp
util/: EvaluateAssignment.py  ExportVariable.h  Option.h
