CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
CMAKE_POLICY(SET CMP0091 NEW)
SET(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_CMAKE})
PROJECT(SNNDPC)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreaded$<$<CONFIG:Debug>:Debug>DLL)

ENABLE_LANGUAGE(CUDA)
INCLUDE_DIRECTORIES(
	$ENV{VCPKG_INCLUDE_DIR}
	${CMAKE_SOURCE_DIR}
	${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
)

SET(PARALLEL_PROVIDER IntelTBB)
#SET(PARALLEL_PROVIDER None CACHE STRING "PARALLEL_PROVIDER")
#SET_PROPERTY(CACHE PARALLEL_PROVIDER PROPERTY STRINGS None IntelTBB OpenMP)

IF(${PARALLEL_PROVIDER} STREQUAL IntelTBB)
	INCLUDE_DIRECTORIES($ENV{ICPP_COMPILER20}/tbb/include)
	LINK_DIRECTORIES($ENV{ICPP_COMPILER20}/tbb/lib/intel64/vc14)
	LINK_LIBRARIES(tbb$<$<CONFIG:Debug>:_debug>)
	ADD_COMPILE_DEFINITIONS(PARALLEL_PROVIDER_IntelTBB)
ELSEIF(${PARALLEL_PROVIDER} STREQUAL OpenMP)
	FIND_PACKAGE(OpenMP REQUIRED)
	LINK_LIBRARIES(OpenMP::OpenMP_CXX)
	ADD_COMPILE_DEFINITIONS(PARALLEL_PROVIDER_OpenMP)
ENDIF()

ADD_COMPILE_DEFINITIONS(
	SOLUTION_DIR="${CMAKE_SOURCE_DIR}/"
)

ADD_SUBDIRECTORY(CPU)
ADD_SUBDIRECTORY(GPU)