CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
SET(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_CMAKE})
PROJECT(SNNDPC)

SET(CMAKE_CXX_STANDARD 20)
ENABLE_LANGUAGE(CUDA)
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
)

SET(PARALLEL_PROVIDER OpenMP CACHE STRING "Which parallel provider to use? IntelTBB? OpenMP? None?")
SET_PROPERTY(CACHE PARALLEL_PROVIDER PROPERTY STRINGS None IntelTBB OpenMP)

IF(${PARALLEL_PROVIDER} STREQUAL IntelTBB)
	FIND_PACKAGE(TBB REQUIRED)
	LINK_LIBRARIES(TBB::tbb)
	ADD_COMPILE_DEFINITIONS(PARALLEL_PROVIDER_IntelTBB)
ELSEIF(${PARALLEL_PROVIDER} STREQUAL OpenMP)
	FIND_PACKAGE(OpenMP REQUIRED)
	LINK_LIBRARIES(OpenMP::OpenMP_CXX)
	ADD_COMPILE_DEFINITIONS(PARALLEL_PROVIDER_OpenMP)
ENDIF()

ADD_COMPILE_DEFINITIONS(
	SOLUTION_DIR="${CMAKE_SOURCE_DIR}/"
)

ADD_SUBDIRECTORY(CPU)
ADD_SUBDIRECTORY(GPU)