CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
SET(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_CMAKE})
PROJECT(SNNDPC)

SET(CMAKE_CXX_STANDARD 20)
INCLUDE_DIRECTORIES($ENV{VCPKG_INCLUDE_DIR})

FIND_PACKAGE(TBB)
FIND_PACKAGE(OpenMP)
IF(TBB_FOUND)
	LINK_LIBRARIES(TBB::tbb)
	ADD_COMPILE_DEFINITIONS(ParallelProvider_IntelTBB)
ELSEIF(OpenMP_FOUND)
	LINK_LIBRARIES(OpenMP::OpenMP_CXX)
	ADD_COMPILE_DEFINITIONS(ParallelProvider_OpenMP)
ENDIF()

ADD_COMPILE_DEFINITIONS(
	SOLUTION_DIR="${CMAKE_SOURCE_DIR}/"
)

ADD_EXECUTABLE(Demo Demo.cpp)