PROJECT(CPU)

ADD_COMPILE_DEFINITIONS(
	PROJECT_DIR="${PROJECT_SOURCE_DIR}/"
	CONFIGURATION=${PROJECT_NAME}
)

ADD_COMPILE_OPTIONS(
	/wd4661
)

ADD_LIBRARY(${PROJECT_NAME} Core.cpp Classifier.cpp)

ADD_EXECUTABLE(${PROJECT_NAME}_Demo ${CMAKE_SOURCE_DIR}/test/Demo.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_Demo ${PROJECT_NAME})