PROJECT(GPU)

FIND_PACKAGE(CUDA REQUIRED)
LINK_LIBRARIES(${CUDA_LIBRARIES} ${CUDA_cublas_LIBRARY})

ADD_COMPILE_DEFINITIONS(
	PROJECT_DIR="${PROJECT_SOURCE_DIR}/"
	CONFIGURATION=${PROJECT_NAME}
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4661")
SET(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=sm_61")

ADD_LIBRARY(${PROJECT_NAME} Core.cpp Classifier.cpp)

ADD_EXECUTABLE(${PROJECT_NAME}_Demo ${CMAKE_SOURCE_DIR}/test/Demo.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_Demo ${PROJECT_NAME})